--- a/packages/jquery/css/dataTable.css
+++ b/packages/jquery/css/dataTable.css
@@ -80,19 +80,19 @@
 }
 
 .paginate_disabled_previous {
-	background-image: url('images/dataTable/back_disabled.jpg');
+	background-image: url('images/dataTable/back_disabled.gif');
 }
 
 .paginate_enabled_previous {
-	background-image: url('images/dataTable/back_enabled.jpg');
+	background-image: url('images/dataTable/back_enabled.gif');
 }
 
 .paginate_disabled_next {
-	background-image: url('images/dataTable/forward_disabled.jpg');
+	background-image: url('images/dataTable/forward_disabled.gif');
 }
 
 .paginate_enabled_next {
-	background-image: url('images/dataTable/forward_enabled.jpg');
+	background-image: url('images/dataTable/forward_enabled.gif');
 }
 
 
@@ -110,6 +110,7 @@
 
 #crm-container table.display thead th {
 	padding:3px 25px 4px 10px;
+        background-color:#E6E6E6;
 	border-bottom: 1px solid black;
 	font-weight: bold;
 	cursor: pointer;
@@ -140,15 +141,15 @@
  */
 
 .sorting_asc {
-	background: url('images/dataTable/sort_asc.jpg') no-repeat center right;
+	background: url('images/dataTable/sort_asc.gif') no-repeat center right;
 }
 
 .sorting_desc {
-	background: url('images/dataTable/sort_desc.jpg') no-repeat center right;
+	background: url('images/dataTable/sort_desc.gif') no-repeat center right;
 }
 
 .sorting {
-	background: url('images/dataTable/sort_both.jpg') no-repeat center right;
+	background: url('images/dataTable/sort_both.gif') no-repeat center right;
 }
 
 
