--- a/packages/jquery/css/dataTable.css
+++ b/packages/jquery/css/dataTable.css
@@ -101,17 +101,17 @@
  * DataTables display
  */
 #crm-container table.display {
-	margin: 0 auto;
+	margin: 0;
 	width: 100%;
 	clear: both;
-	margin-bottom: 8px;
-	margin-top: 8px;
+        border: 1px solid #999999;
 }
 
 #crm-container table.display thead th {
 	padding:3px 25px 4px 10px;
         background-color:#E6E6E6;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #999999;
+        border-top:medium none;
 	font-weight: bold;
 	cursor: pointer;
 	* cursor: hand;
@@ -119,7 +119,7 @@
 
 #crm-container table.display tfoot th {
 	padding: 3px 10px;
-	border-top: 1px solid black;
+	border-top: 1px solid #999999;
 	font-weight: bold;
 }
 
@@ -129,6 +129,7 @@
 
 #crm-container table.display td {
        border-right:1px solid #DDDDDD;
+       border-top:1px solid #DDDDDD;
 }
 
 #crm-container table.display td.center {
@@ -165,11 +166,7 @@
 	background-color: #F5F5F5;
 }
 
-#crm-container tr.even td, #crm-container tr.odd td {
-    border-collapse: collapse;
-    border-top: 1px solid #DDDDDD;
-    border-bottom: 1px solid #DDDDDD;
-}
+
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
  * Misc
  */
