--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -21,18 +21,19 @@
   margin: .5em .1em .5em;
   width: 99%;
   border-collapse: collapse;
-  border: 1px solid #999999;
+  border: 1px solid #DDD;
 }
 
-#crm-container th {
-  font-weight: normal;
-  font-size: 1em;
-  padding: 4px;
-  border-top: 1px solid #999999;	
-  border-bottom: 1px solid #999999;
-  text-align: left;
-  vertical-align: top;
-}
+#crm-container th,
+#crm-container table.display thead th {
+  	font-weight: normal;
+  	font-size: 1em;
+  	padding: 4px;
+  	border:1px solid #CCC;	
+  	text-align: left;
+  	vertical-align: top;
+  	background-color: #E6E6E6;
+	}
 
 #crm-container tbody{
     border-top: none
@@ -47,8 +48,16 @@
   vertical-align: top;
 }
 
+#crm-container tr.even, 
+#crm-container tr.odd, 
+#crm-container tbody th {
+	border-color:#DDD;
+	}
+
+
 #crm-container tr.even-row td, 
-#crm-container tr.odd-row td{
+#crm-container tr.odd-row td,
+#crm-container table.display td {
   border-collapse: collapse;
   border-top: 1px solid #DDDDDD;
 }
@@ -333,7 +342,7 @@ div.spacer,
 
 #crm-container .form-layout td.label, #crm-container .form-layout-compressed td.label, #crm-container .selector td.label, #crm-container .form-layout-compressed th.label {
   text-align: right;
-  padding: 0.5em 0.50em 0em 0.75em;
+  padding: 0.5em 0.5em 0.5em 0.75em;
   border: 0px none;
   vertical-align: top;
 }
@@ -670,14 +679,14 @@ div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
 #crm-container tr.columnheader {
   background-color: #E6E6E6;
   color: #000000;
-  border: 1px solid #999999;
+  border: 1px solid #DDD;
 }
 #crm-container tr.columnheader a {
   color: #000;
   text-decoration: none;
   vertical-align: top;
 }
-#crm-container tr.columnheader-dark {
+#crm-container tr.columnheader-dark th {
   /*background-color: #B0B0B0;*/
   background-color: #999999;
   /*color: #FFFFFF;*/
@@ -687,7 +696,10 @@ div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
 }
 
 
-#crm-container tr.columnheader-dark td, #crm-container tr.columnheader-dark th, #crm-container tr.columnheader td, #crm-container tr.columnfooter td {
+#crm-container tr.columnheader-dark td, 
+#crm-container tr.columnheader-dark th, 
+#crm-container tr.columnheader td, 
+#crm-container tr.columnfooter td {
   font-size: 1.1em;
   font-weight: bold;
 }
@@ -810,17 +822,13 @@ crm-container .status-overdue,
 }
 */
 #crm-container #search-status {
- padding: 0.25em;
- /*background-color: #ccc;*/
- background-color: #E6E6E6;
- font-size: .95em;
- font-weight: bold;
- border: 1px solid #999999;
- border-radius: 4px;
- -moz-border-radius : 4px;
- -webkit-border-radius : 4px;
- -khtml-border-radius : 4px;
-}
+ 	padding: 0.25em;
+ 	/*background-color: #ccc;*/
+ 	background-color: #E6E6E6;
+ 	font-size: .95em;
+ 	font-weight: bold;
+ 	border: 1px solid #CCC;
+	}
 
 #crm-container #search-status ul {
  margin: 0em 0em 0em -2.0em;
@@ -832,24 +840,27 @@ crm-container .status-overdue,
  list-style-position: inside;
 }
 
-div.crm-pager {
-  border: 1px solid #696969; 
-  background-color: #999999;
+.crm-pager {
+  border: 1px solid #CCC; 
+  background-color: #E6E6E6;
   color: #000000;
   position: relative;
   height: 25px;
-  margin-left: -1px;
   padding-top: 5px;
+  width:99%;
 }
 
-div.crm-pager a {
+.crm-pager a {
   /*color: #FFFFFF;*/
   color: #FAFAFA;/*#BADAFF;*/
 }
 
+.crm-pager input {
+	text-align: center;
+	}
+
 .crm-pager-nav {
-  height: 25px;
-  padding-left: 100px;
+
 }
 
 #crm-container .section-hidden, #crm-container div.view-content {
@@ -1229,7 +1240,7 @@ table.campaign td,
 #crm-container table.nestedSelector {
     margin: 0px;
     width: 100%;
-    border: 1px solid #999999;
+    border-bottom:0px;
 }
 
 #crm-container table.nestedSelector tr.columnheader th {
@@ -1362,43 +1373,46 @@ table.campaign td,
 
 /* Styles for  Action Link pop-up */
 
-#panel, .panel {
-  display  : none;
-  z-index  : 1;
-  position : absolute;
-  border   : 1px solid #CCCCCC;
-  background-color: #EEEEEE;
-}
+#panel, 
+.panel {
+  	display  : none;
+  	z-index  : 1;
+  	position : absolute;
+  	border   : 1px solid #CCCCCC;
+  	border-bottom:0px;
+  	background-color: #EEEEEE;
+	
+	}
 
 #crm-container td ul.panel {
-  margin  :-20px 0px 0px 55px;
+  margin  :0px;
   padding : 0;
+  top:15px;
+  right:0px;
 }
 
 #crm-container td ul.panel li {
-  padding : 5px 15px 0px 5px;
-  margin  : 0px;
-  list-style : none;
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
   background-image: none;
   border-bottom: 1px solid #CCCCCC;
+  width:80px;
 }
 
 .btn-slide {
-  text-align      : left;
-  text-decoration : none;
-  border          : none;
-  cursor          : pointer;  
+  text-align: left;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;  
+  position: relative;
 }
 
 #crm-container .panel li a {
   text-decoration : none;
+  padding: 4px;
   color           : #333333;
   display         : block;
-}
-
-#crm-container .panel li:hover { 
-  background-color: #999999;
-  text-color: #FFFFFF;
 }
 
 #crm-container .panel li a:hover { 
@@ -1454,13 +1468,6 @@ table.campaign td,
   background-color : #E6E6E6;
   font-size        : 1em;
   height           : 15px;
-  border-bottom    : 1px solid #999999;
-}
-
-#crm-container thead.sticky {
-  background-color : #E6E6E6;
-  color            : #000000;
-  border           : 1px solid #999999;
 }
 
 #crm-container thead.sticky a {
@@ -1530,7 +1537,6 @@ div.grippie {
 	MARGIN           : 8px 0pt 0px;
 	/*FONT-SIZE: 1.1em;*/
 	background-color : #eee;
-	border           : 1px solid #CCCCCC;
 	width            : 100%;
 }
 #crm-container div.contact_details,
@@ -1540,7 +1546,6 @@ div.grippie {
 	MARGIN           : 8px 0pt 0px;
 	/*FONT-SIZE: 1.1em;*/
 	background-color : #F7F7F7;
-	border           : 1px solid #CCCCCC;
 	width            : 100%;
 }
 
@@ -1627,7 +1632,6 @@ div.grippie {
 
 #crm-container #customFields .contact_panel .customFieldGroup {
 	background-color : #F7F7F7;
-	border           : 1px solid #CCCCCC;
 	line-height      : 1.4em;
 	margin           : 8px 0 0;
 	padding          : 4px;
@@ -1680,12 +1684,6 @@ div.grippie {
    border           : none;
 }
 
-#crm-container .reports-header {
-   background-color : #DCDCDC;
-   border           : 1px solid #DCDCDC;
-   color            : #000000;
-}
-
 #crm-container .reports-header-right {
    text-align       : right;
 }
@@ -1721,13 +1719,6 @@ div.grippie {
   font-weight       : bold;
 }
 
-#crm-container table.report-layout th {
-   background-color : #DCDCDC;
-   border           : 1px solid #DCDCDC;
-   color            : #000000;
-   padding          : 4px;
-}
-
 #crm-container table.report-layout th.report-contents {
    background-color : #F5F5F5;	       
 
@@ -1739,14 +1730,10 @@ div.grippie {
 }
 
 /*override default pager for report*/
-.report-pager .crm-pager {
-    background-color: #DCDCDC;
-    border          : thin solid #999999;
-    margin-left	    : 0.1em;
-    width           : 99%;
-}
+.report-pager .crm-pager { width: 99%; }
+
 .report-pager .crm-pager-nav a {
-    color           : #000000;
+    color: #000000;
 }
 
 #crm-container .report-layout .sticky-header {
@@ -1772,24 +1759,6 @@ div.grippie {
 	background-color:#EEEEEE;
 	width: 20%;
 }
-
-#crm-container table.view-layout td {
-   border-bottom:1px solid #E2E2E2;
-}
-
-
-
-#crm-container th.contriTotalRight {
-   border-right: 1px solid #999999;
-}
-
-#crm-container th.contriTotalLeft {
-   border-left: 1px solid #999999;
-}
-
-
-
-
 
 
 /* Set/alter ICONS */
@@ -1873,7 +1842,7 @@ div.grippie {
 	padding-right:16px; /* so that text doesn't flow on top of icon */
 	}
 #civicrm-menu #crm-qsearch {
-    padding: 0 3px 2px 0;
+    padding: 1px 3px 1px 2px;
     height: 20px;
 	}
 
@@ -1885,6 +1854,23 @@ div.grippie {
 #civicrm-menu #menu-logout {
     float: right;
     border-left: 1px solid #5D5D5D;
+	}
+
+
+/* fix autocomplete colors/styles */
+
+
+.ac_even{ background-color:#F5F5F5; }
+.ac_odd { background-color:#FAFAFA; }
+
+.ac_over { 
+	background-color:#999;
+	color:white;
+	}
+
+.ac_results li strong {
+	color: #000;
+	font-weight: normal;
 	}
 
 /* Joomla Admin Menu alterations */
@@ -1939,7 +1925,7 @@ div.helpicon {
 	cursor      : pointer;
 	background-position:-48px -144px;
 	background-image:url(../packages/jquery/themes/smoothness/images/ui-icons_222222_256x240.png);
-	background-color:#CCC;
+	background-color:#DDD;
 	width:16px;
 	height:16px;
 	}
@@ -2024,6 +2010,32 @@ div#toolTip {
 
 /* This is the style for the trigger icon. The margin-bottom value causes the icon to shift down to center it. */
 .ui-datepicker-trigger {
-   margin-top: 4px;
-   margin-bottom: -6px;
-}
+   	margin-top: 4px;
+   	margin-bottom: -6px;
+	}
+
+
+#activity-content table {width:100%!important;}	
+
+.ui-state-default, 
+.ui-widget-content .ui-state-default,
+.ui-widget-content  {
+	border:1px solid #CCC;
+	}	
+
+#Tag .tree .collapsable .hit,
+#Tag .tree .expandable .hit { padding-left:16px; }
+
+
+
+/*  DataTables sorting */
+
+.sorting_asc { background: url('../i/dataTable/sort_sprites.png') no-repeat right -28px; }
+
+.sorting_desc { background: url('../i/dataTable/sort_sprites.png') no-repeat right -60px; }
+
+.sorting { background: url('../i/dataTable/sort_sprites.png') no-repeat right 4px; }
+
+/*  DataTables fixes */
+
+
