--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -10,7 +10,7 @@
     display   	    : none;
 }
 
-#crm-container .clear {
+contact#crm-container .clear {
     clear 	    : both;
 }
 
@@ -1562,8 +1562,6 @@ div.grippie {
 
 #crm-container div.contact_panel *, 
 #crm-container div#contactTopBar * {
-	padding:0px;
-	margin:0px;
 	border:0px;
 	}
 
