fix contact summary home email not floating left
git-svn-id: http://svn.civicrm.org/civicrm/trunk@24367 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1557,8 +1557,16 @@ div.grippie {
 	MARGIN           : 8px 0pt 0px;
 	/*FONT-SIZE: 1.1em;*/
 	background-color : #F7F7F7;
-	width            : 100%;
+	width: 100%;
+	clear:both;
 }
+
+#crm-container div.contact_panel, 
+#crm-container div#contactTopBar {
+	display:block;
+	width:100%;
+	}
+
 
 #crm-container div.contact_panel *, 
 #crm-container div#contactTopBar * {
