--- a/packages/jquery/css/dataTable.css
+++ b/packages/jquery/css/dataTable.css
@@ -104,13 +104,13 @@
 	margin: 0;
 	width: 100%;
 	clear: both;
-        border: 1px solid #999999;
+        border: 1px solid #DDD;
 }
 
 #crm-container table.display thead th {
 	padding:3px 25px 4px 10px;
         background-color:#E6E6E6;
-	border-bottom: 1px solid #999999;
+	border-bottom: 1px solid #DDD;
         border-top:medium none;
 	font-weight: bold;
 	cursor: pointer;
@@ -119,7 +119,7 @@
 
 #crm-container table.display tfoot th {
 	padding: 3px 10px;
-	border-top: 1px solid #999999;
+	border-top: 1px solid #DDD;
 	font-weight: bold;
 }
 
