--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1378,8 +1378,8 @@ table.campaign td,
 	border-right:1px solid #CCC;
 	}
 
-#panel, 
-.panel {
+#crm-container #panel, 
+#crm-container .panel {
   	display  : none;
   	z-index  : 1;
   	position : absolute;
@@ -1557,8 +1557,16 @@ div.grippie {
 	MARGIN           : 8px 0pt 0px;
 	/*FONT-SIZE: 1.1em;*/
 	background-color : #F7F7F7;
-	width            : 100%;
+	width: 100%;
+	clear:both;
 }
+
+#crm-container div.contact_panel, 
+#crm-container div#contactTopBar {
+	display:block;
+	width:100%;
+	}
+
 
 #crm-container div.contact_panel *, 
 #crm-container div#contactTopBar * {
@@ -1873,7 +1881,11 @@ div.grippie {
 }
 
 
-.icon { height:16px;width:16px;}
+.icon { 
+	height:16px;
+	width:16px;
+	background:transparent url("../packages/jquery/themes/smoothness/images/ui-icons_888888_256x240.png") no-repeat top right;
+	}
 
 #crm-container a.button .icon { float:left; }
 
@@ -1881,14 +1893,14 @@ div.grippie {
 	color:#333;
 	}
 
-.edit-icon { background:transparent url(../i/actions_sprite.png) no-repeat scroll -3px -1px; }
-	.button:hover .edit-icon {background-position: -3px -33px;}
+.edit-icon { background-position: -66px -114px;}
+	.button:hover .edit-icon {background-image:url("../packages/jquery/themes/smoothness/images/ui-icons_222222_256x240.png"); }
 		
-.delete-icon { background   : url("../i/actions_sprite.png") transparent no-repeat -3px -65px; }
-	.button:hover .delete-icon {background-position: -3px -97px;}
+.delete-icon { background-position: -179px -99px;}
+	.button:hover .delete-icon {background-image:url("../packages/jquery/themes/smoothness/images/ui-icons_cd0a0a_256x240.png");}
 
-.dashboard-icon { background   : url("../i/actions_sprite.png") transparent no-repeat -3px -131px; }
-	.button:hover .dashboard-icon {background-position: -3px -163px;}
+.dashboard-icon { background-position: -193px -130px; }
+	.button:hover .dashboard-icon {background-image:url("../packages/jquery/themes/smoothness/images/ui-icons_222222_256x240.png");}
 
 
 #crm-container .geotag {
@@ -2069,6 +2081,12 @@ div#toolTip {
 
 
 /*  DataTables sorting */
+th.sorting,
+th.sorting_asc,
+th.sorting_desc {
+	padding-right:14px !important;
+	}
+
 
 .sorting_asc { background: url('../i/dataTable/sort_sprites.png') no-repeat right -28px; }
 
