--- a/packages/jquery/css/menu.css
+++ b/packages/jquery/css/menu.css
@@ -65,7 +65,7 @@ html>body .innerbox
     left:0px;
     background:#1B1B1B repeat-x;
     width:100%;
-    height:26px;
+    height:23px;
     z-index:9000;
 }
 
@@ -80,12 +80,12 @@ li.active {
 }
 
 #civicrm-menu li a, #root-menu-div li a {
-	text-decoration: none;
-	color: white;
-	cursor: default;
-	display: block;
-	font-weight: normal;
-}
+	color:white;
+	cursor:pointer;
+	display:block;
+	font-weight:normal;
+	text-decoration:none;
+	}
 
 * html div.menu-item {
 	display: inline; /* fixes problem in ie6 */
@@ -93,9 +93,10 @@ li.active {
 
 li.menumain {
 	float: left;
-	padding: 0 10px;
+	padding: 1px 10px;
 	background-image: none;
-	border-right: 1px solid #5D5D5D;	
+	border-right: 1px solid #5D5D5D;
+	margin:0px;	
 }
 
 #root-menu-div .menu-ul li {
@@ -317,17 +318,18 @@ li.blue {
 #civicrm-menu li#crm-qsearch {
     padding: 0 3px 2px 0;
     height: 20px;
-}
+    margin:0px 5px 0 5px;
+	}
 
 li#crm-qsearch input {
     background-color:#ffffff;
     border: 1px solid black;
-}
+	}
 
 li#menu-logout {
     float: right;
     border-left: 1px solid #5D5D5D;
-}
+	}
 
 /** Joomla Admin Menu **/
 
@@ -346,15 +348,15 @@ div.m ul#civicrm-menu {
     -moz-border-radius : 4px;	
     -webkit-border-radius : 4px;	
     -khtml-border-radius : 4px;
-}
+	}
 
 div#toolbar-box div.m{ 
- padding: 0px 8px !important;
-}
+ 	padding: 0px 8px !important;
+	}
 
 div#toolbar-box, div#toolbar-box div.m{
-  height: auto;
-}
+  	height: auto;
+	}
 
 div.m ul#civicrm-menu li#crm-qsearch {
     height:0px;
