CRM-5083 - add button icon for User Record button
git-svn-id: http://svn.civicrm.org/civicrm/trunk@24621 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1884,6 +1884,8 @@ div.grippie {
 .dashboard-icon { background-position: -193px -130px; }
 	.button:hover .dashboard-icon {background-image:url("../packages/jquery/themes/smoothness/images/ui-icons_222222_256x240.png");}
 
+.user-record-icon { background-position:-145px -99px; }
+    .button:hover .user-record-icon {background-image:url("../packages/jquery/themes/smoothness/images/ui-icons_222222_256x240.png");}
 
 #crm-container .geotag {
     padding: 2px 0 2px 20px !important;
