CRM-5083 - fix th background for form labels
git-svn-id: http://svn.civicrm.org/civicrm/trunk@24624 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -34,6 +34,8 @@
   	vertical-align: top;
   	background-color: #E6E6E6;
 	}
+    /* Set background back to normal gray for form labels which use <th>. Temporary fix until we standardize form layout markup. */
+    #crm-container table.form-layout-compressed tbody th.label { background-color: #F7F7F7; }
 
 #crm-container tbody{
     border-top: none
