CRM-5305 css class fixes
git-svn-id: http://svn.civicrm.org/civicrm/trunk@24742 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1899,7 +1899,7 @@ div.grippie {
 
 /* recently viewed icons */
 
-.block-civicrm #recently-viewed .icon {
+.block-civicrm #recently-viewed .crm-icon, .crm-icon {
 	background-image: url('../i/item_sprites.png');
 	margin:2px 4px 0 0;
 	}
